[tool.poetry]
name = "Crawler"
version = "0.1.0"
description = "Crawler is a Python package for teaching web crawling basics at CodeAcademy. It uses Python 3.10 with lxml and requests, focusing on practical web data extraction techniques for beginners."
authors = ["Deimant290 <Deimant290@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.9.4"
pandas = "^2.1.4"
httpx = "^0.26.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-assume = "^2.4.3"


[tool.poetry.group.dev.dependencies]
python-lsp-server = "^1.9.0"
python-lsp-ruff = "^2.0.1"
pip-tools = "^7.3.0"